Alteração de pasta das imagens

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <section class="layout-chamada">
         <div class="layout-banner-ama">
             
-            <img class="banner-ama" src="../ama-teste/imagem/ama_banner_tela_principal.jpg" width="100%" alt="AMA">
+            <img class="banner-ama" src="imagem/ama_banner_tela_principal.jpg" width="100%" alt="AMA">
         </div>
 
         <div class="clearfix">
