--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <!--<link rel="stylesheet" href="css/reset.css">-->
     <link rel="stylesheet" href="estilos.css">
+    <link rel="icon" href="imagem/logo-ama.png">
     
     <title>Amora Movimento Animal</title>
 
